# docs/swagger.json
@@ -61,6 +61,44 @@
                 }
             }
         },
+        "/v1/movie/like": {
+            "get": {
+                "description": "Endpoint for  Get Movie By Like",
+                "tags": [
+                    "Movie"
+                ],
+                "summary": "Get Movie By Like",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/payload.MoviePayload"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/web.Response"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "$ref": "#/definitions/web.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/web.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/movie/{id}": {
             "get": {
                 "description": "Endpoint for Get Movie by id",
